# clitracker

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  main.rs  models.rs  ui.rs
