[package]
name = "clitracker"
version = "0.1.0"
edition = "2021"

[dependencies]
ncurses = "5.101.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
